deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  rules:
    - host: dalaocarryme.com
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: 80
    - host: www.dalaocarryme.com
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: 80
    - host: blog.dalaocarryme.com
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: 80
  backend:
    serviceName: blog
    servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: blog
  sessionAffinity: ClientIP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - image: reg.qiniu.com/holo-blog/blog:{TAG}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          name: blog
          ports:
            - containerPort: 80
              name: 80tcp02
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /usr/share/nginx/html/db.json
              name: db
            - mountPath: /usr/share/nginx/html/Thumbs.json
              name: thumbs
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /data/db.json
            type: ""
          name: db
        - hostPath:
            path: /data/Thumbs.json
            type: ""
          name: thumbs
